improve dev settings

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,18 +25,16 @@ jobs:
             - v1-build-cache
 
       - run:
-          # working_directory: app
           command: mix do deps.get, compile
       - save_cache:
-          # key: v1-mix-cache-{{ .Branch }}-{{ checksum "app/mix.lock" }}
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-          # paths: "app/deps"
           paths: "deps"
       - save_cache:
           key: v1-build-cache-{{ .Branch }}
-          # paths: "app/_build"
           paths: "_build"
 
       - run:
-          # working_directory: app
+          command: mix lint
+
+      - run:
           command: mix test
